Stere tree done

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1088,7 +1088,7 @@
  CHI_tibetian_autonomy:0 "Offer the Tibetians Autonomy"
  CHI_tibetian_autonomy_desc:0 "Given the circumstances surrounding Tibet, it will be easier to make them an independent province of us. It will also cause less tension with the surrounding powers."
  CHI_freedom_of_religion:0 "Guarantee Freedom of Religion"
- CHI_freedom_of_religion_desc:0 "Religion is a critical part of not only Tibet, but the other rebel states. If we're to persue having autonomous provinces, we must ensure that we guarantee their freedom of religion, regardless of our own political situation. This will ensure stability and increase their loyalty to our government."
+ CHI_freedom_of_religion_desc:0 "Religion is a critical part of not only Tibet, but the other rebel states. If we're to pursue having autonomous provinces, we must ensure that we guarantee their freedom of religion, regardless of our own political situation. This will ensure stability and increase their loyalty to our government."
  CHI_tibet_secured:0 "Tibet Secured"
  CHI_tibet_secured_desc:0 "With the Tibetian lands under our control once more, we can focus on increasing co-operation and development."
  CHI_our_borders_restored:0 "Our Borders Restored"
@@ -5388,12 +5388,12 @@ ROM_democratic_coalition_desc:0 ""
 ROM_the_moderating_influence:0 "The Moderating Influence"
 ROM_the_moderating_influence_desc:0 ""
 ROM_the_new_constitution:0 "Hostile Takeover of the PNL"
-ROM_the_new_constitution_desc:0 ""
+ROM_the_new_constitution_desc:0 "With the failure of land reform the call for new leadership grows within the PNL. Progress is a moving train, but it seems as if the current leadership offers no fuel to keep the train moving. New alternatives are being sough from all corners of the party. One, though, makes a better case than most. Constantin Stere is an advocate for reform and liberalization, positions that are sure to bring popularity to the party. Perhaps he is the one who we should try our luck with."
 ROM_a_unifying_figure_head:0 "Pursue Full Male Suffrage"
-ROM_a_unifying_figure_head_desc:0 ""
+ROM_a_unifying_figure_head_desc:0 "It is high time for every man in this country to have the ability to vote. This will ensure that the process is as democratic as possible, and if we stay popular it will also ensure that we win election after election. Stere has put the proposal forward to parliament and while it may ruffle some feathers among the more conservative members, it is sure to pass with the support he currently enjoys. Long live Romanian democracy!"
  ww1_romania.56.t:0 "Internal Coup of the PNL"
  ww1_romania.56.d:0 "The PNL has long had internal divisions, mainly between those who disagree on just how far reform needs to go. Constantin Stere has long been a proponent of an extensive commitee on land reform, full male suffrage, a new constitution, and has even flirted with the idea of giving Women the right to vote as well. On the contrary, Ion Bratianu, the current leader of the PNL, has given lip service to these issues at best. With a new PNL government recently being installed, a battle of power began behind the scenes.\n\nIt seems that Stere has won this conflict, as today the PNL forced Bratianu to stand down in favor of Stere at risk of a party splinter. With this, the King has accepted Bratianu's resignation and Stere will now have to see if he can live up to his promises."
- ww1_romania.56.a:0 "Let's get action!"
+ ww1_romania.56.a:0 "Let's get into action!"
 ROM_the_house_always_wins:0 "The House Always Wins"
 ROM_the_house_always_wins_desc:0 "The King has decided that the charade of constantly shifting parties will end, as he is now backing the PCD entirely. With our mandate secured, now is the time to make moves that we couldn't do beforehand."
 ROM_mandatory_insurance:0 "Mandatory Insurance"
@@ -5578,9 +5578,13 @@ ROM_the_natural_enemy_desc:0 "For too long, the Russian Bear has loomed over our
 ROM_encourage_development_of_the_left_flank:0 "Encourage Socialist Help in Development"
 ROM_a_country_to_fight_for:0 "A Country to Fight For"
 ROM_new_constitution:0 "A New Constitution"
+ROM_new_constitution_desc:0 "With the advent of universal male suffrage, the question begs to be asked: why not go all the way? Stere is drafting a new constitution with the assistance of the others in coalition with the PNL. Once that is completed it will be brought before parliament, voted on, and most likely put into place. We hold the support of most of the population in this endeavor. Change is coming, and we shall greet it with open arms."
 ROM_cooperative_agriculture:0 "Cooperative Agriculture"
+ROM_cooperative_agriculture_desc:0 "To achieve maximum efficiency in our farms the idea of cooperative agriculture has floated around. During wartime it would secure our food situation more than allowing the current profit-driven practices to continue. We are certain to face blowback from the peasantry, but in time they will realize that this was the best course all along when their bellies are fuller due to it."
 ROM_nationalize_steel_industry:0 "Nationalize the Steel Industry"
+ROM_nationalize_steel_industry_desc:0 "Many different goods and materials are essential to our economy, but none quite as essential as our steel industry. Guns, planes, machines: all require this commodity. A radical idea has been proposed by the more left-leaning members of our coalition, the idea being nationalization. If we did this we would strengthen the integrity of our econonmy greatly, although the disturbance to the otherwise free market may cause a stir."
 ROM_poporanist:0 "Poporanism"
+ROM_poporanist_desc:0 "Poporanism is the Romanian ideal of nationalism and populism. It was created by Constantin Stere and is centered around increasing the political power of the peasants, which in turn support the state, leading to a government with the power to do what it wants. While it deems itself anti-socialist Poporanism advocates for collective farming, a decidedly socialist policy. "
 conservative_coalition:0 "Conservative Coalition"
 ww1_romania.67.t:0 "Fusion of the PC and PCD"
 ROM_kick_pnl_from_coalition:0 "Sideline the PNL"
@@ -5589,16 +5593,22 @@ ww1_romania.67.d:0 "With a complete dominance in Romanian politics as it stands,
 ww1_romania.67.a:0 "This will expand our mandate greatly!"
 ROM_expansion_of_the_middle_class:0 "Expand the Middle Class"
 ROM_lessons_from_denmark:0 "Lessons From Denmark"
+ROM_lessons_from_denmark_desc:0 "The small Scandinavian country of Denmark has practiced cooperative farming for centuries, starting from the black death in the 1300s. While the effects of the policy has already made its positive mark on the agricultural sector, the anger felt in the protests against this new direction hit just as hard. Adopting some of the refined practices from Denmark may prove to bring these protests to a close, as the Danes have perfected this economic model to an artform, bringing prosperity not just to the government but to the farmers as well."
 ROM_peasants_democracy:0 "Peasants' Democracy"
+ROM_peasants_democracy_desc:0 "The march towards absolute land reform continues under Stere's loving hand. The new constitution has allowed more effective measures to be put into practice. More and more land is being redistributed in the people's favor, and Stere certaintly reaps the benefit. His government's popularity is now through the roof. It seems at this point nothing can stop him in his path towards liberalization."
 ROM_encourage_jobs_in_the_war_industry:0 "Hire in the War Industry"
 ROM_de_polarization:0 "Depolarization"
 ROM_de_polarization_desc:0 "Why must everyone be an ultra-nationalist or a Marxist? Why can't we all get along, hold hands, and sing together in a poppy field? There must be something we can do to make everyone nice to each other! Well, for a start, we can politically disenfranchise polarizing individuals and promote interparty cooperation. Everyone will be happy, or else!"
 ROM_transition_towards_a_socialist_economy:0 "Transition to a Socialist Economy"
+ROM_transition_towards_a_socialist_economy_desc:0 "Upon nationalizing the steel industry the free market has been thrown into disarry. It's now or nothing. Laws are being drafted to strangle the free market in order to usher in a new normal: state socialism. These laws simultaneously pave the route to nationalizing more essential industries, though not all at once. It will be a gradual process, but eventually Stere's vision will be realized."
 ROM_alliance_with_the_pdsr:0 "Alliance with the PDSR"
+ROM_alliance_with_the_pdsr_desc:0 "The Marxists of the PDSR currently run opposed to us as we do to them. This could change. We are more alike than we think, and in our transition into a socialist form of economy we may invite their help in this regard. This transition is sure to ripple across the Romanian worker's world and to have friends with roots in the Romanian labor movement would prove beneficial to our cause."
 ROM_invite_french_socialists:0 "Invite French Socialists"
+ROM_invite_french_socialists_desc:0 "Our cooperation with the PDSR has done us great good. It would serve us well to broaden our support among the workers of the world by advertising ourselves as pro-labor in addition to our already pro-peasantry ideals. What better to recieve such acclaim and assistance from then if not the most successful socialists of all: the French! "
 ROM_restructure_our_logistics:0 "Improve Supply Logistics"
 ROM_restructure_our_logistics_desc:0 "With the needs of the armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes we can ensure that vital resources reach the front lines more efficiently, strengthen our strategic capabilities and preparing our nation for future challenges."
 ROM_slow_and_steady_wins_the_race:0 "Slow and Steady Wins the Race"
+ROM_slow_and_steady_wins_the_race_desc:0 "The laws have passed. The process of nationalizing our most important industries has begun. Despite all the excitement around the event, we must excerise caution. Too much or to little could have catastrophic effects on our economy. We cannot afford to do anything that may bring it all to a dissapointing and dangerous halt. It is key that we take this slow."
 ROM_social_welfare:0 "Social Welfare"
 ROM_new_times:0 "New Times"
 ROM_new_times_desc:0 "The Great War has ended, but the toll it took on our nation was immense. Inflation is spiraling, and the shadow of war still lingers in the minds of our people. The future may seem uncertain, but we hold the power to change it. A new era is on the horizon, and we must rise to meet it."
@@ -5608,6 +5618,7 @@ ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
 ROM_torch_to_the_future:0 "Romanian Liberalism"
 ROM_socialist_crackdown:0 "Socialist Crackdown"
 ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
+ROM_preventing_a_brain_drain_desc:0 "Our socialist policies have frightened off some of our most innovative minds. The gunsmiths, the scientists, the plane designers, all seek to flee the country after percieving the effect of our agenda as one of silencing and oppression. They must be reassured that this is not the case, and that innovation is valued. The only thing that has changed is it is all under the kind eye of the government now instead of being left to market fluctuations."
 ROM_build_up_more_defenses:0 "Buildup More Defenses"
 ROM_on_select_lame_duck:0 "§WUpon selecting this focus:\nGets event '§W§YSocialists Organize!§Y§W'"
 ww1_romania.65.t:0 "The Great War is Over!"
@@ -8004,6 +8015,7 @@ ROM_embrace_modernization:0 "Embrace Modernization"
  FRA_ww1_support_napoleon_V:0 "Bonapartist Tide"
  FRA_ww1_support_napoleon_V_desc:0 "France experienced its greatest hour of glory during the reign of Emperor Napoleon I. This era took us to Germany, Italy and even Russia. We must find this kind of strong leader by supporting the Bonaparte house."
 ROM_do_later:0 "Bring in Old Guard"
+ROM_do_later_desc:0 "Poet Ion Nae Theodorescu, known more popularly by his penname Tudor Arghezi, is an advocate for the rights of the peasantry. This aligns him with our government perfectly. His poems have made waves through Romanian society and are sure to make even more waves if we support his career, or even offer him a symbolic position. The need for national unity is upon us; Arghezi could help take us there."
  FRA_law_of_exile_retired:0 "Repeal the Law of Exile"
  FRA_law_of_exile_retired_desc:0 "§LThe Law of Exile prevents foreign monarchs from returning to France. This is a law that seeks to only ruin France and deprive the nation of its former glory. This cannot do and the law must be revoked in its entirety.\n\nThis will enable the houses of §YBonaparte§!, §YBourbon§! and §YOrléans§! to return to the French territory and participate to politics.§!"
 
