--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5416,8 +5416,8 @@ ROM_king_carols_reign_desc:0 "While being a German himself, many consider King C
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The people clamor for land reform, and the King has indicated that it is his will as well. The Parliament has gathered to work on negotating such a bill. Hopefully things go the right way."
 ww1_romania.84.t:0 "A Dissapointing Peace Treaty"
-ww1_romania.84.d:0 "BLAH WRITE THIS NOW"
-ww1_romania.84.a:0 "I guess we need TND"
+ww1_romania.84.d:0 "The Prime Minister has officially resigned after failing to obtain Banat in negotiations. Despite recieving nearly all of Romania's claims, Bratianu, at the head of the delegation to Paris, decided that rather than accept compromise with the Kingdom of Serbs, Croats, and Slovenes he would give up entirely and let a new Prime Minister see what he can do. This stubborn attitude has been made clear to be unwanted by the rest of government during a time of national rejuvenation after union with Transylvania, Bukovina, and Bessarabia. Truly an unnecessary gesture when compromise could have made things so much easier."
+ww1_romania.84.a:0 "What a letdown."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
