--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5745,7 +5745,7 @@ ROM_attract_war_industry:0 "Modify §YRomanian Army§! by\n£factory_output_text
 ROM_full_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-10.00%§!\n£factory_output_texticon Factory Output: §G+10.00%§!\n "
 ROM_stable_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-2.50%§!\n£factory_output_texticon Factory Output: §G+5.00%§!\n "
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\n £supply_consumption_texticon Supply Consumption: §G-10.00%§!"
-modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
+modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.10§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
 ROM_army_org2:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!"
 ww1_romania.69.t:0 "Results of Snap Elections"
@@ -5795,6 +5795,9 @@ ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! cons
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
 ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
 ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
+
+ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.105§!"
+
 
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
