--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1877,6 +1877,7 @@
  FNG_decision_demand_lands:0 "Demand Lands"
  FNG_decision_demand_lands_desc:0 "We must restore what we had before for the glory of [ROOT.GetNameDef]!"
  CHI_gain_CER_control:0 "Gain Control Over CER"
+ CHI_gain_SMR_control:0 "Gain Control Over SMR"
  CHI_annex_CER:0 "Seize the CER"
  CHI_annex_CER_desc:0 "The Chinese Eastern Railway, the company that runs it, and the foreigners who live there, by virtue of a diplomatic treaty, effectively rule and manage the railway and its railway zone on our territory as their territory. And we are sure that this is because of the unequal treaty, and this must be rectified immediately!"
  CHI_annex_CER_tt:0 "§YBe aware that if they are vigilant and ready to stop our attempt to seize the railroad, they will recognise this as a act of war and §Rdeclare war on our nation!§!§!"
