--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2333,6 +2333,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  MNT_labud_gojnic:0 "Labud Gojnic"
  MNT_savo_vuletic:0 "Savo Vuletic"
  MNT_nikola_i:0 "Nikola I"
+ MNT_nikola_i_desc:0 "Nikola Petrović Njegoš has ascended the throne in 1860, following the assassination of his uncle Danilo. He has been the ruler of Montenegro for over 50 years, and had seen Serbia change rulers four times since his ascension. A staunch patriot and fighter for Serbian people, he had led successes against Ottomans ever since his ascension to the Cetinje throne, fighting Turks in wars of 1876-1878 and establishing sovereignty after centuries of struggle. His state was often considered the last unconquered part of former Serbian empire and he embraced the name to the fullest. It was often known due to historically Montenegrin Serbs fighting Turks ever since the fall of medieval Serbian state to describe Montenegro as Serbian Sparta. \n\nNikola's ambitions aren't unknown. For his entire rule he had tried to present himself as the true ruler of all Serbs, regardless of the fact that the main Serbia had existed for almost a century by now. With his advancing age ambitions also increased, so Nikola from 1860s when he was ready to relinquish throne in case of Serbian unification as decided by the First Balkan Pact until now when he constantly clashes with Serbian king Petar about the question of who is going to be the king after the inevitable unification between two states, and king Petar's mother being Montenegrin hadn't helped a bit. \n\nWith Nikola's ambitions he was also under a large amount of threats, ranging from blood feuds to the Bomb Affair of 1907 when his military arrested students from Serbia that brought bomb to kill him. He isn't stupid, though, and copying Russia he had enacted constitution in 1905 which is of the worth of the paper it was written. While assembly certainly exists and political parties show, it had been merely a source of legitimization of his rule, as the People's party is effectively banned from running and elections being rigged in favour of monarchists in True People's party. It remains the question of how long will Nikola be able to keep his throne, especially in the face of the inevitable unification with Serbia, in due time."
  MNT_podgorica_assembly:0 "Podgorica Assembly"
  MNT_vukasin_markovic:0 "Vukašin Marković"
  MNT_janko_vukotic:0 "Janko Vukotić"
@@ -2361,7 +2362,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  NEP_baber_shumsher:0 "Baber Shumsher Jung Bahadur Rana"
 
  # NEWFOUNDLAND
- NFL_edward_morris:0 "Edward Morris"
+ NFL_edward_morris:0 "Edward Patrick Morris"
  NFL_john_chalker_crosbie:0 "John Chalker Crosbie"
  NFL_william_frederick_lloyd:0 "William F. Lloyd"
  NFL_ralph_champneys_williams:0 "Ralph Champneys Williams"
