the most important event ever

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3837,7 +3837,13 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_montenegro.15.t: "Kingdom of Montenegro is Proclaimed"
  ww1_montenegro.15.d: "Prince Nicholas of Montenegro proclaimed the Kingdom of Montenegro in Cetinje on today, elevating the country from the rank of Principality. Since 1860, the Prince had ruled the country and had initiated several modernising reforms."
  ww1_montenegro.15.a: "Long May He Reign"
- 
+ ww1_montenegro.16.t:0 "Montenegro Ascends to Kingdom"
+ ww1_montenegro.16.d:0 "Montenegrin prince Nikola I had unilaterally declared his nation's ascension to the level of kingdom. The move was obviously supported by every patriotic Serb in both Serbia and Montenegro. There was a major celebration in that occassion, and numerous monarchs and foreign officials visited the celebration. The celebration was so large and overshadowed the credit taken for that occasion, namely the credit is so large that it would have to be paid for the next decade at the very least. Among other things, it confirms the ambitions of now king Nikola even more now."
+ ww1_montenegro.16.a:0 "Let them enjoy and send our congratulations"
+ ww1_montenegro.17.t:0 "Kingdom of Montenegro Proclaimed"
+ ww1_montenegro.17.d:0 "Prince Nicholas of Montenegro proclaimed the Kingdom of Montenegro in Cetinje today, on a major celebration, elevating the country from the rank of Principality. Since 1860, the Prince had ruled the country and had initiated several modernising reforms, and now had officially ascended to the level of most monarchs in Europe."
+ ww1_montenegro.17.a:0 "Petty bragging of an irrelevant monarch."
+
  ww1_nepal.1.t: "King Prithvi Dies!"
  ww1_nepal.1.d: "Much like his father, King PrithiviBir died under suspicious circumstances at a relatively young age, and his son Tribhuvan ascended the throne."
  ww1_nepal.1.a: "When the Prime Minister is SUS! 0_0"
