--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8823,7 +8823,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.101.b: "The Union is formed!"
  ww1_england.20.t: "Revolution in United-Kingdom"
  ww1_england.20.d: "Revolution in United-Kingdom"
- 
+ ww1_england.30.t:0 "King Edward VII Dies"
+ ww1_england.30.d:0 "King Edward VII has died after succumbing to several heart attacks. His health was continously in decline since the beginnning of the year but he had pushed through with his duties, rarely taking a pause, until the very last moment. His smoking habbits certainly didn't help with his health and he was already suffering from cancer in 1907, which was cured by Radium. He was the longest serving Prince of Wales, a British title for heir apparent, and while his rule was relatively brief, especially compared to the rule of his mother, his rule would still be marked as Edwardian Era, as he was a very respected monarch. His son George Frederick Ernst Albert would take the throne in the following days, taking up the regnal name of George V."
+ ww1_england.30.a:0 "Will George V be a worthy successor?"
  ww1_england.29.t: "Britain wants to join our Alliance"
  ww1_england.29.d: "The British Government has petitioned our own to join our global alliance."
  ww1_england.29.a: "Of course!"
@@ -8841,9 +8843,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.28.t: "The British Alliance"
  ww1_england.28.a: "Yes"
  ww1_england.28.b: "No"
- ww1_england.30.t: "The Dervish War"
- ww1_england.30.d: "After failing to put down the revolts in British Somaliland, the Dervish have gotten in league with the Ottomans and have revolted against our rule."
- ww1_england.30.a: "It's our least valuable colony... who cares?"
  ww1_england.31.t: "Britain proposes an Imperial Federation"
  ww1_england.31.d: "The British, in an attempt to save their empire, have proposed the formation of an Imperial Federation. This would include such features as an Imperial Parliament based in Ottowa, and would effectively mean equal voting rights and citizenship for all members of the empire. However, it would doom our autonomy forever."
  ww1_england.31.a: "For the sake of peace, let the Empire unite."
