Twilight of the Edwardian Era

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8814,9 +8814,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.18.a: "Useful."
  
  ww1_england.100.t: "The Death of Edward VII"
- ww1_england.100.d: "Edward VII's life and namesake era have drawn to a close. Though in a state of grief, the new king George V has recieved his coronation. Time will tell if he can solve the turbulent situation in Britain that he has inheirited."
- ww1_england.100.a: "George V is the new King"
- ww1_england.100.b: "Long live the King!"
+ ww1_england.100.d: "Edward VII's life and namesake era have drawn to a close. His Imperial Majesty suffered several heart attacks, but refused to go to bed, saying, "No, I shall not give in; I shall go on; I shall work to the end." Between moments of faintness, his son told him that his horse, had won at Kempton Park that afternoon. The King replied, "Yes, I have heard of it. I am very glad": his final words. \nAt 11:30 p.m. he lost consciousness for the last time and was put to bed. He died 15 minutes later. \nThough in a state of grief, the new king George V has recieved his coronation. Time will tell if he can solve the turbulent situation in Britain that he has inheirited."
+ ww1_england.100.a: "The king is dead, long live the king!"
+ ww1_england.1000.d:0 "King Edward VII has died after succumbing to several heart attacks. His health was continously in decline since the beginnning of the year but he had pushed through with his duties, rarely taking a pause, until the very last moment. His smoking habbits certainly didn't help with his health and he was already suffering from cancer in 1907, which was cured by Radium. He was the longest serving Prince of Wales, a British title for heir apparent, and while his rule was relatively brief, especially compared to the rule of his mother, his rule would still be marked as Edwardian Era, as he was a very respected monarch. His son George Frederick Ernst Albert would take the throne in the following days, taking up the regnal name of George V."
+ ww1_england.1000.a:0 "Will George V be a worthy successor?"
  ww1_england.101.t: "South Africa Act"
  ww1_england.101.d: "South Africa has joined Canada, Australia, and New Zealand as a more autonomous dominion of the United Kingdom. An act of Parliament unified the Cape of Good Hope, Natal, Orange River Colony, and Transvaal into the Union of South Africa, which was allotted the same quasi-independent state and set of privileges as the rest of the British commonwealth."
  ww1_england.101.a: "Great, another puppet for the British Empire."
@@ -8843,6 +8844,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.28.t: "The British Alliance"
  ww1_england.28.a: "Yes"
  ww1_england.28.b: "No"
+ ww1_england.30.t: "The Dervish War"
+ ww1_england.30.d: "After failing to put down the revolts in British Somaliland, the Dervish have gotten in league with the Ottomans and have revolted against our rule."
+ ww1_england.30.a: "It's our least valuable colony... who cares?"
  ww1_england.31.t: "Britain proposes an Imperial Federation"
  ww1_england.31.d: "The British, in an attempt to save their empire, have proposed the formation of an Imperial Federation. This would include such features as an Imperial Parliament based in Ottowa, and would effectively mean equal voting rights and citizenship for all members of the empire. However, it would doom our autonomy forever."
  ww1_england.31.a: "For the sake of peace, let the Empire unite."
