--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -531,7 +531,7 @@
  PER_fascism_DEF:0 "the Persian Empire"
  PER_democratic:0 "Republic of Persia"
  PER_democratic_DEF:0 "the Republic of Persia"
- PER_neutrality_DEF:0 "the Sublime State of Persia"
+ PER_neutrality_DEF:0 "the Guarded Domains of Persia"
  PER_communism:0 "Persian Socialist Republic"
  PER_communism_DEF:0 "the Persian Socialist Republic"
  PER:0 "Persia"
