Senusi surrunder fix

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15042,3 +15042,4 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_libya.1.t:0 "Ahmed Sharif Abdicates"
  ww1_libya.1.d:0 "Weakened by his defeat, Ahmed Sharif as-Senussi concedes the leadership of the Senussi order to his young cousin Mohammed Idris, who is open to the negotiations with the imperialists."
  ww1_libya.1.a:0 "Inshallah."
+ LBA_modus_vivendi_of_acroma:0 "Modus vivendi of Acroma"
