Nordic state flags and Kingdom of Iceland tweaks
also Greenland is a colony

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1953,3 +1953,6 @@
 
  XSM_QIN:0 "Qinghai"
  XSM_QIN_DEF:0 "the Qinghai Province"
+ 
+ ICE_DEN_autonomy_tgwr_real_union_DEF:0 "the Kingdom of Iceland"
+ ICE_DEN_autonomy_tgwr_personal_union_DEF:0 "the Kingdom of Iceland"
