--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1653,85 +1653,9 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HYD_osman_ali_khan:0 "Osman Ali Khan"
 
  # ICELAND
- ICE_john_magnusson:0 "Jón Magnússon"
-#  ICL_hermann_jonasson:0 "Hermann Jonasson"
-#  ICL_olafur_thors:0 "Olafur Thors"
-#  ICL_einar_thordarsson:0 "Einar Thordarsson"
-#  ICL_knud_dyby:0 "Knud Dyby"
-#  ICL_stefan_j_stefansson:0 "Stefan J. Stefansson"
-#  ICL_thorkil_sonne:0 "Thorkil Sonne"
-#  ICL_walter_ulrich:0 "Walter Ulrich"
-#  ICL_ingvar_palmasson:0 "Ingvar Palmasson"
-#  ICL_jakob_rv_moller:0 "Jakob R.V. Møller"
-#  ICL_jorgen_ft_lolle:0 "Jørgen F.T. Lolle"
-#  ICL_august_arendrup:0 "August Arendrup"
-#  ICL_kai_hammerich:0 "Kai Hammerich"
-#  ICL_paul_ipsen:0 "Paul Ipsen"
-#  ICL_asger_ev_grandjean:0 "Asger E.V. Grandjean"
-#  ICL_vilhjalmur_thor:0 "Vilhjalmur Thor"
-#  ICL_petur_magnusson:0 "Petur Magnusson"
-#  ICL_finnur_jonsson:0 "Finnur Jönsson"
-#  ICL_bjarni_benediktsson:0 "Bjarni Benediktsson"
-#  ICL_johann_th_josefsson:0 "Johann Th. Josefsson"
-#  ICL_bjorn_olofsson:0 "Björn Olofsson"
-#  ICL_steingrimur_steinthorsson:0 "Steingrimur Steinthorsson"
-#  ICL_eysteinn_jonsson:0 "Eysteinn Jönsson"
-#  ICL_gudmundur_gudmundsson:0 "Gudmundur Gudmundsson"
-#  ICL_einar_arnorsson:0 "Einar Arnorsson"
-
-#  INO_tjarda_van_starkenborgh_stachouwer:0 "Tjarda van Starkenborgh-Stachouwer"
-#  INO_hubertus_van_mook:0 "Hubertus Van Mook"
-#  INO_muhammad_iii_pontiak:0 "Muhammad III Pontiak"
-#  INO_fedde_schurer:0 "Fedde Schurer"
-#  INO_raymond_westerling:0 "Raymond Westerling"
-#  INO_murk_boerstra:0 "Murk Boerstra"
-#  INO_gerardus_berenschot:0 "Gerardus Berenschot"
-#  INO_conrad_helfrich:0 "Conrad Helfrich"
-#  INO_ludolph_van_oyen:0 "Ludolph van Oyen"
-#  INO_muhammad_hatta:0 "Mohammad Hatta"
-#  INO_muhammad_thamrin:0 "Muhammad Thamrin"
-#  INO_amir_sjarifuddin:0 "Amir Sjarifuddin"
-#  INO_ahmad_subandrio:0 "Ahmad Subandrio"
-#  INO_hamengkubowono_ix_yopgya:0 "Hamengkubowono IX Yopgya"
-#  INO_sutan_sjahrir:0 "Sutan Sjahrir"
-#  INO_sukarjo_wiryopranato:0 "Sukarjo Wiryopranato"
-#  INO_suryono_suripno:0 "Suryono Suripno"
-#  INO_sjarifudin_prawiranegara:0 "Sjarifudin Prawiranegara"
-#  INO_dodechismo_djuanda:0 "Dodechismo Djuanda"
-#  INO_haj_agus_salim:0 "Haj Agus Salim"
-#  INO_amangwu_viii_jogarta:0 "Amangwu VIII Jogarta"
-#  INO_danudirjia_setiabudi:0 "Danudirjia Setiabudi"
-#  INO_lukman_dan_sardjono:0 "Lukman Dan Sardjono"
-#  INO_dw_cokroaminoto:0 "D.W. Cokroaminoto"
-#  INO_ngabehi_van_jogakarta:0 "Ngabehi van Jogakarta"
-#  INO_arie_frederick_lasut:0 "Arie Frederick Lasut"
-#  INO_adam_malik:0 "Adam Malik"
-#  INO_sm_kartosuwirjo:0 "S.M. Kartosuwirjo"
-#  INO_dn_aidit:0 "D.N. Aidit"
-#  INO_besar_sudirman:0 "Besar Sudirman"
-#  INO_dr_cipto_mangunkusomo:0 "Dr. Cipto Mangunkusomo"
-#  INO_mohammed_yamin:0 "Mohammed Yamin"
-#  INO_tn_supratman:0 "T.N. Supratman"
-#  INO_hein_ter_poorten:0 "Hein Ter Poorten"
-#  INO_hamid_ii_pontiak:0 "Hamid II Pontiak"
-#  INO_tan_malaka:0 "Tan Malaka"
-#  INO_abdul_harris_nasution:0 "Abdul Harris Nasution"
-#  INO_rudolph_bakker:0 "Rudolph Bakker"
-#  INO_simon_spoor:0 "Simon Spoor"
-#  INO_uyrip_sumoharjo:0 "Uyrip Sumoharjo"
-#  INO_amangwu_ix_jogarta:0 "Amangwu IX Jogarta"
-#  INO_we_yohannes:0 "We Yohannes"
-#  INO_ahmad_alimin:0 "Ahmad Alimin"
-#  INO_mohammed_jusf:0 "Mohammed Jusf"
-#  INO_rm_suryo:0 "R.M. Suryo"
-#  INO_im_najoan:0 "I.M. Najoan"
-#  INO_abdul_halim:0 "Abdul Halim"
-#  INO_mohammed_natsir:0 "Mohammed Natsir"
-#  INO_sukoman_wirjosandjojo:0 "Sukoman Wirjosandjojo"
-#  INO_siswanto_wilopo:0 "Siswanto Wilopo"
-#  INO_ali_sastromidjojo:0 "Ali Sastromidjojo"
-#  INO_wakil_pakmehasan:0 "Wakil Pakmehasan"
-
+ ICE_jon_magnusson:0 "Jón Magnússon"
+ ICE_frederick_viii:0 "Friðrik 8."
+ 
  # DUTCH EAST INDIES
  INS_a_w_frederik_idenburg:0 "Alexander Idenburg"
  INS_frits_van_daalen:0 "Frits van Daalen"
