--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2601,10 +2601,9 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_denmark.3.b:0 "Victorious!"
  ww1_denmark.3.c:0 "Kiel shall be separated as protectorate."
  ww1_denmark.3.e:0 "Aww damn. They chose Germany!"
- ww1_denmark.4.t:0 "Independent Iceland?"
+ ww1_denmark.4.t:0 "Danish–Icelandic Act of Union"
  ww1_denmark.4.d:0 "In the Great War we noticed that Iceland is too far and isolated from the Danish homeland. They have been under home rule since 1904, but may now have to be elevated to sovereign state."
  ww1_denmark.4.a:0 "We recognise."
- ww1_denmark.4.b:0 "Just enjoy the home rule..."
  
  ww1_sweden.2.t: "Occupation of Åland"
  ww1_sweden.2.d: "Finland is currently bleeding itself through a civil war. We have a great opportunity to begin quick intervention in the Åland Islands to ensure our people in those islands are protected. The islands was taken by the Russians about a century ago, and still the islanders are Swedish people. Also it is demilitarized since the Treaty of Paris 1856, it is easy to send troops there."
