--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5729,15 +5729,19 @@ ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania no
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
 ROM_tackle_the_core_issue:0 "Tackle the Core Issue"
 ROM_do_not_delete.tt:0 "§RDon't delete this its for future§R§W"
-ww1_romania.81.t: "Hungarian Revolution"
-ww1_romania.81.d: "Seeing that our new neighbour has peacefully surrendered to communist menace, we are in danger. The Communist Party of Hungary is built on Revanchist policies that wish to carve up our land! Our friends with similar problems will support us in the struggle. Do we strike first?"
-ww1_romania.81.a: "Down with the Reds!"
-ww1_romania.81.b: "We need to recover from the war first..."
-ww1_romania.82.t: "Hungarian Soviet capitulates"
-ww1_romania.82.d: "Seeing that they are almost encircled and with loss of their capital, Hungarian Soviet government capitulated. While we couldn't capture Bela Kun, who escaped to Russia, we captured others. Now the question is, do we really need to occupy them and experience constant unrests there, or do we let them go with non communist government?"
-ww1_romania.82.a: "We won, we will get our core land"
-ww1_romania.82.b: "We aren't satisfied with just our rightful land, they shall be punished"
-
+ww1_romania.81.t:0 "Hungarian Revolution"
+ww1_romania.81.d:0 "Seeing that our new neighbour has peacefully surrendered to communist menace, we are in danger. The Communist Party of Hungary is built on Revanchist policies that wish to carve up our land! Our friends with similar problems will support us in the struggle. Do we strike first?"
+ww1_romania.81.a:0 "Down with the Reds!"
+ww1_romania.81.b:0 "We need to recover from the war first..."
+ww1_romania.82.t:0 "Hungarian Soviet capitulates"
+ww1_romania.82.d:0 "Seeing that they are almost encircled and with loss of their capital, Hungarian Soviet government capitulated. While we couldn't capture Bela Kun, who escaped to Russia, we captured others. Now the question is, do we really need to occupy them and experience constant unrests there, or do we let them go with non communist government?"
+ww1_romania.82.a:0 "We won, we will get our core land"
+ww1_romania.82.b:0 "We aren't satisfied with just our rightful land, they shall be punished"
+ROM_the_apathetic_prime_minister:0 "The Apathetic Prime Minister"
+ROM_crack_down_on_radical_elements:0 "Crack Down on Radical Elements"
+ROM_alliance_of_convience:0 "Alliance of Convenience"
+ROM_alliance_with_the_peasants_party:0 "Alliance With the Peasants' Party"
+ROM_LITTLE_ENTENTE_FACTION_NAME:0 "Little Entente"
 
 
 #custom tooltips
