--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5749,6 +5749,11 @@ ww1_romania.85.t:0 "Election Results of Greater Romania"
 ww1_romania.85.d:0 "Blah write it lol"
 ww1_romania.85.a:0 "TND victory"
 ww1_romania.85.b:0 "1488 victory"
+ ww1_romania.86.t:0 "King Ferdinand Dissolves the Government"
+ ww1_romania.86.d:0 "Blah he saw the guys land reform as too radical"
+ ww1_romania.86.a:0 "how dare that nigger!"
+ROM_grand_coalition_idea:0 "Grand Coalitino"
+ROM_rise_of_socialism:0 "Rise of Socialism"
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
