--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5752,7 +5752,7 @@ ww1_romania.85.b:0 "1488 victory"
  ww1_romania.86.t:0 "King Ferdinand Dissolves the Government"
  ww1_romania.86.d:0 "Blah he saw the guys land reform as too radical"
  ww1_romania.86.a:0 "how dare that nigger!"
-ROM_grand_coalition_idea:0 "Grand Coalitino"
+ROM_grand_coalition_idea:0 "Grand Coalition"
 ROM_rise_of_socialism:0 "Rise of Socialism"
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorite"
