--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -498,6 +498,14 @@ l_english:
  ww1_BUL_TUR.60.d: "Geshov's statement has left the Turkish representatives uncertain. Bulgaria is unwilling to commit to long-term territorial agreements regarding Macedonia. This indecision may strain further negotiations."
  ww1_BUL_TUR.60.a: "What Does This Even Mean?"
 
+ ww1_BUL_TUR.61.t:0 "Tea Time with W.T. Stead"
+ ww1_BUL_TUR.61.d:0 "The well-known British journalist and social reformer, W.T. Stead, has arrived in Sofia for a discussion with our statesman Ivan Geshov. Over a cup of tea, they exchanged views on the political situation in the Balkans and beyond. In particular, the ongoing Italian invasion of Libya caught Stead's attention, as he expressed his concern about the broader implications of this conflict on the Ottoman Empire and the balance of power in the Mediterranean. Geshov, while focused on Bulgaria's own interests, listened closely to Stead's perspective."
+ ww1_BUL_TUR.61.a:0 "This sounds promising."
+
+ ww1_BUL_TUR.62.t:0 "W.T. Stead's Doubts about the Young Turk Administration"
+ ww1_BUL_TUR.62.d:0 "During his stay, W.T. Stead shared his skepticism about the Young Turk regime, expressing concern over its ability to effectively govern the Ottoman Empire during such turbulent times. He suggested that the administration’s inexperience might accelerate the empire’s decline. Ivan Geshov, while wary of Stead's criticisms, noted the importance of understanding outside perspectives on the Ottoman Empire's future."
+ ww1_BUL_TUR.62.a:0 "A concerning development."
+
  ###Ideas Loc###
  #BULGARIA
  bdz:0 "BDZ"
