--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -223,7 +223,7 @@
  STATE_222: "Biryuch"
  STATE_223: "Tula"
  STATE_224: "Oryol"
- STATE_225: "Strumica"
+ STATE_225: "Ustrumca"
  STATE_226: "Yekaterinoslav"
  STATE_227: "Yuzovka"
  STATE_228: "Starobelsk"
