--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -92,7 +92,7 @@
  VICTORY_POINTS_636: "Gotthard Pass"
  VICTORY_POINTS_11586: "Beograd"
  VICTORY_POINTS_3868: "Dubrovnik"
- VICTORY_POINTS_3882: "Skopje"
+ VICTORY_POINTS_3882: "Üsküp"
  VICTORY_POINTS_3924: "Spalato"
  VICTORY_POINTS_9627: "Ljubljana"
  VICTORY_POINTS_11581: "Zagreb"
@@ -115,7 +115,7 @@
  VICTORY_POINTS_6682: "Arad"
  VICTORY_POINTS_6711: "Cluj"
  VICTORY_POINTS_9716: "Iasi"
- VICTORY_POINTS_9914: "Tirana"
+ VICTORY_POINTS_9914: "Tiran"
  VICTORY_POINTS_4109: "Athina"
  VICTORY_POINTS_9940: "Irakleio"
  VICTORY_POINTS_11818: "Selanik"
@@ -575,7 +575,7 @@
  VICTORY_POINTS_9974: "Ningbo"
  VICTORY_POINTS_9975: "Ahmadabad"
  VICTORY_POINTS_9994: "Bizerte"
- VICTORY_POINTS_10007: "Rhodes"
+ VICTORY_POINTS_10007: "Rodos"
  VICTORY_POINTS_10201: "Trincomalee"
  VICTORY_POINTS_13067: "Attu"
  VICTORY_POINTS_10862: "Accra"
@@ -786,7 +786,7 @@
  VICTORY_POINTS_11965: "Kalamáta"
  VICTORY_POINTS_12058: "Chania"
  VICTORY_POINTS_7193: "Limassol"
- VICTORY_POINTS_11767: "Vlorë"
+ VICTORY_POINTS_11767: "Avlonya"
  VICTORY_POINTS_12049: "Port Said"
  VICTORY_POINTS_4073: "Suez"
  VICTORY_POINTS_3996: "Giza"
@@ -961,10 +961,10 @@
  VICTORY_POINTS_7990: "Birjand"
  VICTORY_POINTS_8093: "Semnan"
  VICTORY_POINTS_10782: "Iransahr"
- VICTORY_POINTS_6940: "Prishtina"
+ VICTORY_POINTS_6940: "Priştine"
  VICTORY_POINTS_11857: "Leskovac"
  VICTORY_POINTS_3614: "Pancevo"
- VICTORY_POINTS_914: "Gjirokastër"
+ VICTORY_POINTS_914: "Ergiri"
  VICTORY_POINTS_1068: "Beni Suef"
  VICTORY_POINTS_4161: "El-Arīsh"
  VICTORY_POINTS_10099: "Sharm el-Sheikh"
@@ -1084,7 +1084,7 @@
  VICTORY_POINTS_1819: "Kronstadt"
  VICTORY_POINTS_138: "Kargopol"
  VICTORY_POINTS_11061: "Kotlas"
- VICTORY_POINTS_13255: "Durrës"
+ VICTORY_POINTS_13255: "Dıraç"
  VICTORY_POINTS_13256: "Siracusa"
  VICTORY_POINTS_12087: "Tétouan"
  VICTORY_POINTS_10580: "Abakan"
@@ -1307,9 +1307,9 @@
  VICTORY_POINTS_9794: "Terni"
  VICTORY_POINTS_9916: "Arta"
  VICTORY_POINTS_9837: "Florina"
- VICTORY_POINTS_13274: "Shkodër"
+ VICTORY_POINTS_13274: "İşkodra"
  VICTORY_POINTS_9906: "Vranje"
- VICTORY_POINTS_3939: "Novi Pazar"
+ VICTORY_POINTS_3939: "Yeni Pazar"
  VICTORY_POINTS_6790: "Parma"
  VICTORY_POINTS_782: "Ravenna"
  VICTORY_POINTS_969: "Bergamo"
@@ -1450,9 +1450,9 @@
  VICTORY_POINTS_12867: "Villahermosa"
  VICTORY_POINTS_523: "Starobelsk"
  VICTORY_POINTS_8103: "Nea Orestiás"
- VICTORY_POINTS_10104: "Strumica"
+ VICTORY_POINTS_10104: "Ustrumca"
  VICTORY_POINTS_7987: "Bosilegrad"
- VICTORY_POINTS_11856: "Ohrid"
+ VICTORY_POINTS_11856: "Ohri"
  VICTORY_POINTS_6484: "Lublin"
  VICTORY_POINTS_10739: "Al-Fashir"
  VICTORY_POINTS_1920: "Sana'a"
@@ -1884,7 +1884,7 @@
  VICTORY_POINTS_6930: "Serfice"
  VICTORY_POINTS_13272: "Görice"
  VICTORY_POINTS_9875: "İlbasan"
- VICTORY_POINTS_9849: "Prizren"
+ VICTORY_POINTS_9849: "Pürzerrin"
  VICTORY_POINTS_6913: "İpek"
  VICTORY_POINTS_937: "Taşlıca"
  VICTORY_POINTS_3879: "Tekirdağ"
